# veanu

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  citation.cff  pyproject.toml
.github/workflows/: ci.yml
docs/: _config.yml  drugsafetycompare.md  fraudcrawler.md  index.md  spock.md  toxicologygan.md
tests/tests-drugsafetycompare/: test-compare.py  test-germany.py  test-switzerland.py
tests/tests-lasa/unittests/: test_src_units.py
tests/tests-spock/unittests/: test_src_base.py  test_src_scraping.py
veanu/drugsafetycompare/: launch_demo_app.py  launch_demo_pipeline.py
veanu/fraudcrawler/: launch_demo_app.py  launch_demo_pipeline.py
veanu/fraudcrawler/src/: classify_suspicious_product.py  client.py  enrichment.py
veanu/fraudcrawler/tests/: test_keyword_enricher.py
veanu/lasa/: __main__.py  launch_demo_app.py  launch_demo_pipeline.py
veanu/lasa/app/: __init__.py  app.py
veanu/lasa/src/: cli.py  units.py
veanu/newsscraper/: launch_demo_app.py
veanu/newsscraper/src/: scrape.py
veanu/spock/: __main__.py  launch_demo_app.py  launch_demo_pipeline.py
veanu/spock/app/: __init__.py  app.py  formatter.py
veanu/spock/src/: cli.py  ner.py  scraping.py
vianu/spock/: settings.py
vianu/spock/app/: app.py
vianu/spock/src/: base.py  scraping.py
